syntax = "proto3";
package productPackage;

message Product {
    int32 id = 1;
    string title = 2;
    string price = 3;
}

message ProductId {
    int32 id = 1;
}

message productsList {
    repeated Product product = 1;
}

message CreateProduct {
    string title = 1;
    string price = 2;
}

message Result {
    string status =1;
}


message Empty {}


service ProductService {
    rpc listProduct (Empty) returns (productsList);
    rpc getProduct (ProductId) returns (Product);
    rpc newProduct (CreateProduct) returns (Result);
    rpc updateProduct (Product) returns (Result);
    rpc deleteProduct (ProductId) returns (Result);
}
